--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,6 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+lib_deps = TinyGSM@~0.10.8, mbedtls@~2.23.0, Time@1.6, StreamDebugger@~1.0.1
+build_flags =
+  -D MBEDTLS_HKDF_C
